update - switching to rem unit instead of em and fixing some layout issues

--- a/css/components.css
+++ b/css/components.css
@@ -3,9 +3,9 @@ p {
 }
 
 .section__heading {
-	font-size: 2.6em;
+	font-size: 2.6rem;
 	width: fit-content;
-	margin-block-start: 2em;
+	margin-block-start: 2rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -39,7 +39,7 @@ p {
 
 .section__abstract {
 	width: fit-content;
-	font-size: 1.2em;
+	font-size: 1.2rem;
 	text-align: center;
 
 	@media screen and (min-width: 600px) {
@@ -48,18 +48,18 @@ p {
 }
 
 :is(.cta-btn, .cta-btn--variant, .secondary-btn) {
-	font-size: 1em;
+	font-size: 1rem;
 	width: fit-content;
-	padding: 1em;
-	border: 2px solid transparent;
-	border-radius: 0.5em;
+	padding: 1rem;
+	border: 0.1rem solid transparent;
+	border-radius: 0.5rem;
 	transition: all 0.3s ease-in-out;
 	cursor: pointer;
 }
 
 .secondary-btn {
 	color: var(--primary-color);
-	border: 1px solid var(--primary-color);
+	border: 0.1rem solid var(--primary-color);
 	background-color: var(--secondary-color);
 }
 
@@ -86,5 +86,5 @@ p {
 }
 
 :is(button, input, textarea, .secondary-btn, .cta-btn, .cta-btn--variant):focus {
-	outline: 2px solid var(--fallback-color);
+	outline: 0.1rem solid var(--fallback-color);
 }
